Added admin panel design, and some basic unit tests.